# ico

./: Cargo.toml  README.md
src/: cli.rs  ico.rs  main.rs  png.rs  svg.rs
