[package]
name = "ico"
version = "0.1.0"
authors = ["Shresht7"]
description = "A simple command-line utility to generate ICO files"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
ico = "0.4.0"
image = "0.25.6"
resvg = "0.45.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
usvg = "0.45.0"
